@@ -59,6 +59,7 @@ our $pickupitems_file;
 our $mon_control_file;
 our $chat_file;
 our $item_log_file;
+our $storage_file;
 our $shop_log_file;
 our $shop_file;
 our $def_field;
@@ -121,6 +122,7 @@ sub parseArguments {
 	undef $pickupitems_file;
 	undef $chat_file;
 	undef $shop_file;
+	undef $storage_file;
 	undef $monster_log;
 	undef $item_log_file;
 	undef $default_interface;
@@ -141,6 +143,7 @@ sub parseArguments {
 		'pickupitems=s',	\$pickupitems_file,
 		'chat=s',		\$chat_file,
 		'shop=s',		\$shop_file,
+		'storage=s',	\$storage_file;
 		'monsters=s',		\$monster_log,
 		'items=s',		\$item_log_file,
 
@@ -159,6 +162,7 @@ sub parseArguments {
 	$shop_file = "$control_folder/shop.txt" if (!defined $shop_file);
 	$monster_log = "$logs_folder/monsters.txt" if (!defined $monster_log);
 	$item_log_file = "$logs_folder/items.txt" if (!defined $item_log_file);
+	$storage_file = "$logs_folder/storage.txt" if (!defined $storage_file);
 	$shop_log_file ||= "$logs_folder/shop.txt";
 	if (!defined $default_interface) {
 		if ($ENV{OPENKORE_DEFAULT_INTERFACE} && $ENV{OPENKORE_DEFAULT_INTERFACE} ne "") {
